--- a/app/views/tax_invoices/index.html.erb
+++ b/app/views/tax_invoices/index.html.erb
@@ -1,4 +1,5 @@
 <%- model_class = TaxInvoice -%>
+
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 </div>
@@ -42,6 +43,10 @@
         <td><%= tax_invoice.total_payment.round(5) %></td>
 
         <td>
+
+
+
+
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_tax_invoice_path(tax_invoice), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
@@ -54,6 +59,15 @@
     <% end %>
   </tbody>
 </table>
+
+
+<div class="flickr_pagination">
+  <div class="page_info">
+    <%= page_entries_info @tax_invoices %>
+  </div>
+  <%= will_paginate @tax_invoices, :container => false %>
+</div>
+
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_tax_invoice_path,
