--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -39,6 +39,15 @@
   </tbody>
 </table>
 
+
+
+<div class="flickr_pagination">
+  <div class="page_info">
+    <%= page_entries_info @orders %>
+  </div>
+  <%= will_paginate @orders, :container => false %>
+</div>
+
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_order_path,
             :class => 'btn btn-primary' %>
