--- a/app/views/tax_invoices/generate_pdf.html.erb
+++ b/app/views/tax_invoices/generate_pdf.html.erb
@@ -1,160 +1,225 @@
 <html>
 <head>
   <title>
-
   </title>
+  <style>
+      .logo img
+      {
+          height:100px;
+          width:100px;
+          margin:-30px 0px 0px 100px;
+      }
+      .logo h1
+      {
+          padding:0px 0px 0px 0px;
+          margin:-60px 0px 0px 0px;
+      }
+  </style>
 </head>
 <body>
+<table height="1250" width="1000" align="center">
+  <tr>
+    <td>
+      <table height="200" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+        <tr>
+          <td valign="top">
 
 
-   <table border="1" cellpadding="0" cellspacing="0">
+            <div><center>Subject to Nashik Jurisdiction</center></div>
+            <div><center><U>CHALLAN CUM INVOICE</U></center></div>
+            <div class="logo"><img src="scsc.png"><center><h1><b>Shree Chakradhar Swami Engineering</b></center></h1></div>
+            <div><center><b>[ISO : 9001 Certified]</b></div>
+            <div><center><h3>SPECIALIST IN :</B> INTERNAL GRINDING / CYLINDRICAL GRINDING & SURFACE GRINDING (ROTARY)
+            </center></h3></div>
+            <div><center><b>Office : </b>R/H No. 10, Ganjanan R/h, Radha krushna Nagar, Ashok Nagar, Satpur, Nashik-12.</center></div>
+            <div><center><b>Works : </b>Plot No. F-63, MIDC Satpur, Nashik-7 (Behind - M. G. Industry. E-mail:shreechakradhar@gmail.com</center></div>
+          </td>
+        </tr>
+      </table>
 
+      <table height="150" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
 
-     <tr>
-       <td>
-         <table border="1" cellpadding="0" cellspacing="0">
-           <tr>
-             <td>Subject to Nashik Jurisdiction  Mob:9823255572</td>
-           </tr>
-           <tr>
-             <td>CHALLAN CUM INVOICE</td>
-           </tr>
-           <tr>
-             <td><h1>Shree Chakradhar Swami Engineering</h1></td>
-           </tr>
-           <tr>
-             <td>SPECIALIST IN: INTERNAL GRINDING/CYLINDRICAL GRINDING & SURFACE GRINDING(ROTARY)</td>
-           </tr>
-           <tr>
-             <td>Office: R/H No. 10, Gajanan R/H, Radha Krushna Nagar, Ashok Nagar, Satpur, Nashik-12.</td>
-           </tr>
-           <tr>
-             <td>
-               Works: Plot No. F-63,MIDC Satpur, Nashik-7(Behind-M.G.Industry)***Email:- shreechakradhar@gmail.com
-             </td>
-           </tr>
-         </table>
-       </td>
-     </tr>
+        <tr>
 
+          <td valign="top" width="50%">
+            To.
+          </td>
 
-      <tr>
-        <td>
-          <table border="1" cellpadding="0" cellspacing="0" width="100%">
-            <tr>
-              <td width="50%">
-                <table border="1" cellpadding="0" cellspacing="0" width="100%">
-                  <tr>
-                    <td>To,</td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                  </tr>
-                </table>
-              </td>
-              <td width="50%">
-                <table border="1" cellpadding="0" cellspacing="0" width="100%">
-                  <tr>
-                    <td>INVOICE No.</td>
-                    <td>&nbsp;</td>
-                    <td>Date</td>
-                    <td>&nbsp;</td>
-                  </tr>
-                  <tr>
-                    <td>P.O.No.</td>
-                    <td>&nbsp;</td>
-                    <td>Date</td>
-                    <td>&nbsp;</td>
-                  </tr>
-                  <tr>
-                    <td>Vendor Code No.</td>
-                    <td>&nbsp;</td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-
-
-
-      <tr>
-        <td width="100%">
-          <table border="1" cellpadding="0" cellspacing="0" width="100%">
-            <tr>
-              <td>Sr. No.</td>
-              <td>Part No.</td>
-              <td>Material Description</td>
-              <td>Quantity</td>
-              <td>Rate</td>
-              <td>Amount</td>
-            </tr>
-            <tr>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-            </tr>
-            <tr>
-              <td>&nbsp;</td>
-              <td>PAN No.:ACLPP8613R</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-            </tr>
-            <tr>
-              <td>&nbsp;</td>
-              <td>Shop order_______Open No._____</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-
-
-      <tr>
-        <td>
-          <tr>
-            <table>
+          <td valign="top">
+            <table border="1" height="100%" width="100%" cellpadding="0" cellspacing="0">
               <tr>
-                <td>
-                    VAT TIN No.:27780881734-V w.e.f.4.2.2012
-           CST TIN No.:27780881734-C w.e.f.4.2.2012
-                </td>
+                <td width="25%">INVOICE No.</td><td width="25%">&nbsp;</td><td width="25%">Date</td><td>&nbsp;</td>
+              </tr>
+              <tr>
+                <td width="25%">P.O. No.</td><td width="25%">&nbsp;</td><td width="25%">Date</td><td width="25%">&nbsp;</td>
+
+              </tr>
+              <tr>
+                <td colspan="4">Vendor Code No.</td>
+
               </tr>
             </table>
-          </tr>
-        </td>
-        <td>
-           <table border="1" cellpadding="0" cellspacing="0">
-             <tr>
-               <td width="60%">TOTAL</td>
-               <td>&nbsp;</td>
-             </tr>
-             <tr>
-               <td width="60%">VAT@ </td>
-               <td>&nbsp;</td>
-             </tr>
-             <tr>
-               <td width="60%">GRAND TOTAL</td>
-               <td>&nbsp;</td>
-             </tr>
-           </table>
-        </td>
-      </tr>
-      <tr>
-        <td width="100%">Rs.in words:</td>
-      </tr>
-    </table>
+          </td>
+
+        </tr>
+      </table>
+
+      <table height="35" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+
+        <tr valign="top" height="15%">
+          <td width="5%"><center>Sr. No</center></td>
+          <td width="15%"><center>Part No.</center></td>
+          <td width="40%"><center>Material Description</center></td>
+          <td width="10%"><center>Quantity</center></td>
+          <td width="15%"><center>Rate</center></td>
+          <td width="15%"><center>Amount</center></td>
+        </tr>
+      </table>
+
+      <table height="35" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+
+        <tr valign="top" >
+          <td width="5%"><center>&nbsp;</center></td>
+          <td width="15%"><center>&nbsp;</center></td>
+          <td width="40%"><h3>&nbsp;&nbsp;LABOUR CHARGES ONLY</h3></td>
+          <td width="10%"><center>&nbsp;</center></td>
+          <td width="10%"><center>Rs.</center></td>
+          <td><center>Ps.</center></td>
+          <td width="10%"><center>Rs.</center></td>
+          <td><center>Ps.</center></td>
+        </tr>
+      </table>
+
+      <table height="450" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+
+        <tr valign="top">
+          <td width="5%"><center>&nbsp;</center></td>
+          <td width="15%"><center>&nbsp;</center></td>
+          <td width="40%"><h3>&nbsp;</h3></td>
+          <td width="10%"><center>&nbsp;</center></td>
+          <td width="10%"><center>&nbsp;</center></td>
+          <td><center>&nbsp;</center></td>
+          <td width="10%"><center>&nbsp;</center></td>
+          <td><center>&nbsp;</center></td>
+        </tr>
+      </table>
+
+
+      <table height="30" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+
+        <tr valign="top">
+          <td width="5%"><center>&nbsp;</center></td>
+          <td width="15%"><center>&nbsp;</center></td>
+          <td width="40%"><div>PAN No.:<b>ACLPP8613R</b></div></td>
+          <td width="10%"><center>&nbsp;</center></td>
+          <td width="10%"><center>&nbsp;</center></td>
+          <td><center>&nbsp;</center></td>
+          <td width="10%"><center>&nbsp;</center></td>
+          <td><center>&nbsp;</center></td>
+        </tr>
+      </table>
+
+
+      <table height="30" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+
+        <tr valign="top">
+          <td width="5%"><center>&nbsp;</center></td>
+          <td width="15%"><center>&nbsp;</center></td>
+          <td width="10%">Shop Order</td>
+          <td width="10%">&nbsp;</td>
+          <td width="10%">Open No.</td>
+          <td width="10%">&nbsp;</td>
+          <td width="10%"><center>&nbsp;</center></td>
+          <td width="10%"><center>&nbsp;</center></td>
+          <td><center>&nbsp;</center></td>
+          <td width="10%"><center>&nbsp;</center></td>
+          <td><center>&nbsp;</center></td>
+        </tr>
+      </table>
+
+
+      <table height="150" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+
+        <tr valign="top">
+          <td width="60%">
+            <div><b>VATTIN No. : 27780881734 - V w.e.f.4.2.2012</b></div>
+            <div><b>CSTTIN No. : 27780881734 - C w.e.f.4.2.2012</b></div>
+            <div align="justify">"I/We here by certified that my our registration certificate under the Maharashtra Value Added Tax act 2002 is in force on the date on which the sale of goods specified in this tax invoice is made by me/ us and that the transaction of sale covered by this tax invoice has been effected by me/us and each shall be accounted for the turn over Of sales which filling of returns and the due tax, if any, payable on the sale has been paid or shall be paid" </div>
+          </td>
+          <td width="20%">
+            <table border="1" height="100%" width="100%" cellpadding="0" cellspacing="0">
+              <tr>
+                <td align="right"><b>TOTAL</b></td>
+              </tr>
+              <tr>
+                <td align="right"><B>VAT @</B></td>
+              </tr>
+              <tr>
+                <td align="right"><B>GRAND TOTAL</B></td>
+              </tr>
+
+            </table>
+          </td>
+          <td width="20%">
+            <table border="1" height="100%" width="100%" cellpadding="0" cellspacing="0">
+              <tr>
+                <td width="76%">&nbsp;</td>
+                <td>&nbsp;</td>
+
+              </tr>
+              <tr>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+
+              </tr>
+              <tr>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+
+              </tr>
+
+            </table>
+          </td>
+
+        </tr>
+      </table>
+      <!---------------------------------------------------------------------------------------------------->
+      <table height="30" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+        <tr>
+          <td>
+            Rs. in words:
+          </td>
+        </tr>
+      </table>
+      <!---------------------------------------------------------------------------------------------------->
+      <table height="60" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+        <tr>
+          <td width="60%" valign="top">
+            TERMS: 24% interest per annum will be charged on all account remain unpaid after delivery our responsibligy ceases once the goods will leave our factory. All disputes to be settled within Nashik Jurisdiction.
+          </td>
+          <td valign="top" align="right">
+            For <b>Shree Chakradhar Swami Engineering</b>
+          </td>
+        </tr>
+      </table>
+      <!---------------------------------------------------------------------------------------------------->
+
+      <table height="80" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+        <tr>
+          <td width="60%" valign="bottom">
+            <b>Receiver's Signature & Stamp</b>
+          </td>
+          <td valign="bottom">
+            <center>Authorised Signatory</center>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+
+</table>
+
+<!---------------------------------------------------------------------------------------------------->
+
 </body>
 </html>
