--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -51,6 +51,14 @@
   </tbody>
 </table>
 
+
+<div class="flickr_pagination">
+  <div class="page_info">
+    <%= page_entries_info @products %>
+  </div>
+  <%= will_paginate @products, :container => false %>
+</div>
+
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_product_path,
             :class => 'btn btn-primary' %>
