pdf print final

--- a/app/assets/stylesheets/tax_invoices.css
+++ b/app/assets/stylesheets/tax_invoices.css
@@ -33,3 +33,27 @@
     margin-right: 1em; }
 .flickr_pagination .next_page {
     margin-left: 1em; }
+
+
+
+
+
+.logo img
+{
+    height:100px;
+    width:100px;
+    margin:-30px 0px 0px 100px;
+}
+.logo h1
+{
+    padding:0px 0px 0px 0px;
+    margin:-60px 0px 0px 0px;
+}
+
+
+
+
+
+
+
+
