--- a/app/views/bank_transactions/show.html.erb
+++ b/app/views/bank_transactions/show.html.erb
@@ -4,12 +4,18 @@
 </div>
 
 <dl class="dl-horizontal">
+
+  <dt><strong><%= model_class.human_attribute_name(:bank_name) %>:</strong></dt>
+  <dd><%= @bank_transaction.bank_account_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:transaction_type) %>:</strong></dt>
+  <dd><%= @bank_transaction.trans_type %></dd>
   <dt><strong><%= model_class.human_attribute_name(:type) %>:</strong></dt>
   <dd><%= @bank_transaction.transaction_type %></dd>
   <dt><strong><%= model_class.human_attribute_name(:micor_code) %>:</strong></dt>
   <dd><%= @bank_transaction.micor_code %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:bank_account_id) %>:</strong></dt>
-  <dd><%= @bank_transaction.bank_account_id %></dd>
+
+  <dt><strong><%= model_class.human_attribute_name(:amount) %>:</strong></dt>
+  <dd><%= @bank_transaction.amount %></dd>
 </dl>
 
 <div class="form-actions">
