--- a/app/views/tax_invoices/index.html.erb
+++ b/app/views/tax_invoices/index.html.erb
@@ -20,6 +20,7 @@
       <th><%= model_class.human_attribute_name(:amount) %></th>
       <th><%= model_class.human_attribute_name(:vat) %></th>
       <th><%= model_class.human_attribute_name(:total_payment) %></th>
+      <th><%= model_class.human_attribute_name(:payment) %></th>
 
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -41,6 +42,7 @@
         <td><%= tax_invoice.amount.round(5) %></td>
         <td><%= tax_invoice.vat.round(5) %></td>
         <td><%= tax_invoice.total_payment.round(5) %></td>
+        <td><%= tax_invoice.payment %></td>
 
         <td>
 
