--- a/app/views/bank_transactions/show.html.erb
+++ b/app/views/bank_transactions/show.html.erb
@@ -11,11 +11,17 @@
   <dd><%= @bank_transaction.trans_type %></dd>
   <dt><strong><%= model_class.human_attribute_name(:type) %>:</strong></dt>
   <dd><%= @bank_transaction.transaction_type %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:amount) %>:</strong></dt>
+  <dd><%= @bank_transaction.amount %></dd>
   <dt><strong><%= model_class.human_attribute_name(:micor_code) %>:</strong></dt>
   <dd><%= @bank_transaction.micor_code %></dd>
 
-  <dt><strong><%= model_class.human_attribute_name(:amount) %>:</strong></dt>
-  <dd><%= @bank_transaction.amount %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:PO_number) %>:</strong></dt>
+  <dd><%= @bank_transaction.PO_number %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:invoice_number) %>:</strong></dt>
+  <dd><%= @bank_transaction.invoice_number %></dd>
+
+
 </dl>
 
 <div class="form-actions">
