--- a/app/views/tax_invoices/generate_pdf.html.erb
+++ b/app/views/tax_invoices/generate_pdf.html.erb
@@ -86,9 +86,9 @@
           <td width="15%" align="center"><%= @tax_invoice.product_name %></td>
           <td width="40%">&nbsp;</td>
           <td width="10%" align="center"><%= @tax_invoice.quantity %></td>
-          <td width="15%" align="right"><%= @tax_invoice.rate %></td>
+          <td width="15%" align="center"><%= @tax_invoice.rate %></td>
 
-          <td width="15%" align="right"><%= @tax_invoice.amount.round(5) %></td>
+          <td width="15%" align="center"><%= @tax_invoice.amount.round(5) %></td>
 
         </tr>
       </table>
@@ -152,17 +152,17 @@
           <td width="15%">
             <table border="1" height="100%" width="100%" cellpadding="0" cellspacing="0">
               <tr>
-                <td width="76%" align="right"> <%= @tax_invoice.amount.round(5) %> </td>
+                <td width="76%" align="center"> <%= @tax_invoice.amount.round(5) %> </td>
 
 
               </tr>
               <tr>
-                <td align="right"> <%= @tax_invoice.vat.round(5) %> </td>
+                <td align="center"> <%= @tax_invoice.vat.round(5) %> </td>
 
 
               </tr>
               <tr>
-                <td align="right"> <%= @tax_invoice.total_payment.round(5) %> </td>
+                <td align="center"> <%= @tax_invoice.total_payment.round(5) %> </td>
 
 
               </tr>
