--- a/app/views/tax_invoices/show.html.erb
+++ b/app/views/tax_invoices/show.html.erb
@@ -30,6 +30,8 @@
   <dd><%= @tax_invoice.vat.round(5) %></dd>
   <dt><strong><%= model_class.human_attribute_name(:total_payment) %>:</strong></dt>
   <dd><%= @tax_invoice.total_payment.round(5) %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:payment) %>:</strong></dt>
+  <dd><%= @tax_invoice.payment %></dd>
 
 </dl>
 
